# pixivbot

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Makefile  README.el.md  README.eo.md  README.lzh.md  README.mars.md  README.md  README.sa.md  README.sw.md  README.zh-CN.md  README.zh-TW.md  build.rs  config.toml.example  docker-compose.yml  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  docker-publish.yml  docker.yml  release.yml
.sisyphus/plans/: booru-support.md  refactor-roadmap.md
booru_client/: Cargo.toml
booru_client/src/: bypass.rs  client.rs  engine_type.rs  error.rs  lib.rs  models.rs
docs/: README.el.md  README.en.md  README.eo.md  README.lzh.md  README.mars.md  README.sa.md  README.sw.md  README.zh-TW.md  eh-archiver-page-reference.md
docs/superpowers/plans/: 2026-06-26-ehentai-subscription.md  2026-06-28-eh-decoupled-pipeline.md  2026-06-29-eh-review-fixes.md  2026-06-30-s3-image-upload.md  2026-07-03-ipfs3-image-upload.md  2026-07-07-eh-download-resume-progress.md  2026-07-07-eh-resolution-routing.md  2026-07-07-eh-resume-download-batched-upload.md  2026-07-07-ipfs-cache-warmup-and-slow-download.md  2026-07-07-ipfs-dual-gateway-telegraph.md  2026-07-18-correct-ipfs3-zip-extract.md  2026-07-18-eh-zip-size-and-ipfs3.md  2026-07-19-pr-112-gp-attempt-ledger.md  2026-07-19-pr-112-review-fixes.md  2026-07-20-ipfs3-zip-fallback-compatibility.md  2026-07-21-eh-archive-concurrent-download.md  2026-07-21-eh-queue-status.md  2026-07-22-eh-queue-priority-gp-policy.md
docs/superpowers/specs/: 2026-06-26-ehentai-subscription-design.md  2026-06-28-eh-decoupled-pipeline-design.md  2026-06-29-eh-review-fixes-design.md  2026-06-30-eh-live-regression-cli-design.md  2026-06-30-s3-image-upload-design.md  2026-07-03-ipfs3-image-upload-design.md  2026-07-07-eh-download-resume-progress.md  2026-07-07-eh-resume-download-batched-upload-design.md  2026-07-07-ipfs-dual-gateway-telegraph-design.md  2026-07-08-eh-download-speedup-design.md  2026-07-18-eh-zip-size-and-ipfs3-design.md  2026-07-19-pr-112-gp-attempt-ledger-design.md  2026-07-19-pr-112-review-fixes-design.md  2026-07-20-ipfs3-zip-fallback-compatibility-design.md  2026-07-21-eh-archive-concurrent-download-design.md  2026-07-21-eh-queue-status-design.md  2026-07-22-eh-direct-archive-form-regression-design.md  2026-07-22-eh-queue-priority-gp-policy-design.md
eh_client/: Cargo.toml
eh_client/src/: client.rs  error.rs  lib.rs  models.rs  parser.rs  telegraph.rs
eh_client/src/archive_download/: artifacts.rs  assembly.rs  coordinator.rs  http.rs  initialization.rs  manifest.rs  mod.rs  part.rs  policy.rs  sequential.rs
eh_client/src/archive_download/coordinator/: runtime.rs  setup.rs  shutdown.rs  split.rs
eh_client/src/archive_download/part/: attempt.rs  worker.rs
eh_client/tests/: debug_html.rs  integration.rs  real_download_test.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250123_000001_create_tables.rs  m20251124_000001_add_author_name.rs  m20251124_000002_add_chat_content_settings.rs  m20251125_000001_create_tables.rs  m20251127_000001_add_subscription_latest_data.rs  m20251127_000002_remove_task_latest_data.rs  m20251128_000001_init.rs  m20251128_000001_remove_task_updated_by.rs  m20251202_000001_add_chat_sensitive_tags.rs  m20251205_000001_convert_null_tags_to_default.rs  m20251206_000001_init_database.rs  m20251219_000001_add_messages_table.rs  m20260116_000000_add_allow_without_mention.rs  m20260410_000000_add_booru_filter.rs  m20260421_000000_refactor_booru_task_value.rs  m20260626_000000_add_ehentai.rs  m20260628_000000_eh_pipeline_decouple.rs  m20260628_000100_eh_unique_constraint.rs  m20260629_000000_eh_review_fixes.rs  m20260630_000200_eh_queue_subscription_id.rs  m20260707_000300_eh_background_download.rs  m20260707_000400_eh_telegraph_rewrite.rs  m20260718_000000_eh_download_gp_cost.rs  m20260719_000000_eh_gp_spend_attempts.rs
pixiv_client/: Cargo.toml
pixiv_client/src/: auth.rs  client.rs  error.rs  lib.rs  models.rs
src/: config.rs  error.rs  main.rs
src/booru/: mod.rs
src/bot/: commands.rs  handler.rs  link_handler.rs  middleware.rs  mod.rs  notifier.rs  state.rs
src/bot/handlers/: admin.rs  booru_download.rs  download.rs  ehentai.rs  info.rs  mod.rs  settings.rs  subscription.rs
src/bot/handlers/subscription/: author.rs  booru.rs  channel.rs  ehentai.rs  helpers.rs  list.rs  ranking.rs  types.rs
src/bot/notifier/: AGENTS.md  batch.rs  button.rs  caption.rs  media.rs  numbering.rs  result.rs  ugoira.rs
src/cache/: mod.rs
src/db/: mod.rs  repo.rs
src/db/entities/: chat.rs  chats.rs  eh_download_queue.rs  eh_gp_spend_attempts.rs  messages.rs  mod.rs  role.rs  subscription.rs  subscriptions.rs  task.rs  tasks.rs  user.rs  users.rs
src/db/repo/: chats.rs  eh_download_queue.rs  eh_gp_spend_attempts.rs  eh_integration_tests.rs  messages.rs  stats.rs  subscriptions.rs  tasks.rs  users.rs
src/db/types/: booru_filter.rs  booru_task_key.rs  eh_filter.rs  eh_task_key.rs  mod.rs  role.rs  state.rs  tag.rs  task_type.rs
src/pixiv/: client.rs  downloader.rs  mod.rs  model.rs
src/pixiv_client/: README.md  auth.rs  client.rs  error.rs  mod.rs  models.rs
src/scheduler/: author_engine.rs  booru_engine.rs  eh_engine.rs  engine.rs  helpers.rs  mod.rs  name_update_engine.rs  ranking_engine.rs
src/utils/: args.rs  caption.rs  channel.rs  duration.rs  filter.rs  html.rs  markdown.rs  mod.rs  sensitive.rs  tag.rs
