[workspace]
members = [".", "migration"]

[package]
name = "pixivbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.19"
governor = "0.10.2"
migration = { path = "migration" }
pixivrs = "0.1.0"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "sqlx-dep"] }
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
teloxide = { version = "0.17.0", features = ["macros"] }
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

