[workspace]
members = [".", "migration"]

[package]
name = "pixivbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
config = { version = "0.15.19", features = ["toml"], default-features = false }
governor = "0.10.2"
md5 = "0.8.0"
migration = { path = "migration" }
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "sqlx-dep"] }
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
teloxide = { version = "0.17.0", features = ["macros", "ctrlc_handler", "rustls"], default-features = false}
tokio = { version = "1.48.0", features = ["macros", "rt", "time"] }
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
url = "2.5.7"

