[package]
name = "booru_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.94"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
