[package]
name = "eh_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.94"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
regex = "1.11.1"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
urlencoding = "2.1.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"
serde_json = "1.0"
