[package]
name = "eh_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.94"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
futures-util = "0.3"
quick-xml = { version = "0.38.4", features = ["serialize"] }
regex = "1.11.1"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
rust-s3 = { version = "0.37.2", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["fs", "io-util", "rt", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
urlencoding = "2.1.3"
zip = { version = "8.6.0", default-features = false }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"
