[package]
name = "migration"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }

[dependencies.sea-orm]
version = "1.1.19"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]
