[package]
name = "migration"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.94"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "1.1.20", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
serde_json = "1.0.149"

[dependencies.sea-orm]
version = "1.1.20"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]
